2009-06-28  David Reitter <david.reitter@gmail.com>

	* nsterm.m (keydown): Avoid infinite loop.

2009-06-28  Andreas Schwab  <schwab@linux-m68k.org>

	* process.c (send_process): Keep decoded string in a local
	variable and protect it from GC.  (Bug#3521)

2009-06-28  Eli Zaretskii  <eliz@gnu.org>

	* term.c (create_tty_output) [MSDOS]: #ifdef away.
	(tty_free_frame_resources) [MSDOS]: Add a DOS-specific version.

2009-06-28  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (XD_SYMBOL_TO_DBUS_TYPE): Convert macro into function
	xd_symbol_to_dbus_type.  With Solaris 2.11, it was said to compile
	for hours, when optimzation is enabled.
	(xd_signature, xd_append_arg, xd_retrieve_arg, xd_initialize)
	(xd_read_message): Make them static.

2009-06-27  Chong Yidong  <cyd@stupidchicken.com>

	* frame.c (x_get_arg): Check if dpyinfo is non-NULL.

2009-06-27  Glenn Morris  <rgm@gnu.org>

	* m/pmax.h: Restore file.

2009-06-26  Peter Jolly  <peter@jollys.org>  (tiny change)

	* ftfont.c (get_adstyle_property): Call font_intern_prop with 1 as
	the arg FORCE_SYMBOL.

2009-06-25  Kenichi Handa  <handa@m17n.org>

	* fontset.c (fontset_find_font): When a usable rfont_def is found
	in a fallback font-group, make it the first element of the group.
	(fontset_get_font_group): Return 0 if no font-group is set for C.
	(fontset_font): Record the availability of a font for C both in
	the realized fontsets of the current one and the default one.

2009-06-23  Jim Meyering  <meyering@redhat.com>

	* src/ftfont.c (setup_otf_gstring, ftfont_shape_by_flt): Use
	xmalloc and xrealloc (not malloc and realloc), so subsequent heap
	pointer dereferences are guaranteed to be valid.

2009-06-21  Jason Rumney  <jasonr@gnu.org>

	* w32term.c (keyboard_codepage): New static variable.
	(w32_read_socket) [WM_INPUTLANGCHANGE]: Update it.
	(w32_read_socket) [WM_CHAR]: Use it to decode character
	input (bug#3237).
	(w32_initialize): Initialize it.
	(codepage_for_locale): New function.
